uat-cee-3/manifests/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: infin8v2-app
  name: infin8v2-app
  namespace: 'uat-cee-3'
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infin8v2-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: infin8v2-app
    spec:
      containers:
        - env:
            - name: domain
              valueFrom:
                configMapKeyRef:
                  key: DOMAIN
                  name: infin8v2-config-map
            - name: clientId
              valueFrom:
                configMapKeyRef:
                  key: CLIENTID
                  name: infin8v2-config-map
            - name: clientKey
              valueFrom:
                configMapKeyRef:
                  key: CLIENTKEY
                  name: infin8v2-config-map
            - name: redirectUri
              valueFrom:
                configMapKeyRef:
                  key: REDIRECTURI
                  name: infin8v2-config-map
            - name: BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: BASE_URL
                  name: infin8v2-config-map
            - name: wfe_app_id
              valueFrom:
                configMapKeyRef:
                  key: WFE_APP_ID
                  name: infin8v2-config-map
            - name: ldapOu
              valueFrom:
                configMapKeyRef:
                  key: LDAPOU
                  name: infin8v2-config-map
            - name: channel_entity_id
              valueFrom:
                configMapKeyRef:
                  key: CHANNEL_ENTITY_ID
                  name: infin8v2-config-map
            - name: subchannel_entity_id
              valueFrom:
                configMapKeyRef:
                  key: SUBCHANNEL_ENTITY_ID
                  name: infin8v2-config-map
            - name: dealsource_entity_id
              valueFrom:
                configMapKeyRef:
                  key: DEALSOURCE_ENTITY_ID
                  name: infin8v2-config-map
            - name: campaign_entity_id
              valueFrom:
                configMapKeyRef:
                  key: CAMPAIGN_ENTITY_ID
                  name: infin8v2-config-map
            - name: campaign_relationship_entity_id
              valueFrom:
                configMapKeyRef:
                  key: CAPAIGN_RELATIONSHIP_ENTITY_ID
                  name: infin8v2-config-map
            - name: participants_entity_id
              valueFrom:
                configMapKeyRef:
                  key: PARTICIPANTS_ENTITY_ID
                  name: infin8v2-config-map
            - name: infin8_users_entity_id
              valueFrom:
                configMapKeyRef:
                  key: INFIN8_USERS_ENTITY_ID
                  name: infin8v2-config-map
            - name: loan_application_entity_id
              valueFrom:
                configMapKeyRef:
                  key: LOAN_APPLICATION_ENTITY_ID
                  name: infin8v2-config-map
            - name: contact_entity_id
              valueFrom:
                configMapKeyRef:
                  key: CONTACT_ENTITY_ID
                  name: infin8v2-config-map
            - name: ldapScope
              valueFrom:
                configMapKeyRef:
                  key: ldapScope
                  name: infin8v2-config-map
            - name: IDSS247R
              valueFrom:
                configMapKeyRef:
                  key: IDSS247R
                  name: infin8v2-config-map
            - name: userProfilePicPublicBucketName
              valueFrom:
                configMapKeyRef:
                  key: userProfilePicPublicBucketName
                  name: infin8v2-config-map
            - name: REMOTE_ENTRY_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: REMOTE_ENTRY_BASE_URL
                  name: infin8v2-config-map
            - name: cee_force_login
              valueFrom:
                configMapKeyRef:
                  key: cee_force_login
                  name: infin8v2-config-map                  
          image: '577638400901.dkr.ecr.us-east-1.amazonaws.com/infini8v2-rt-dev:infin8v2-frontend-app-00.20.01'
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - '60'
          name: infin8v2-app
          volumeMounts:
            - name: remote-entry-volume
              mountPath: /usr/share/nginx/html/           
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      volumes:
        - name: remote-entry-volume
          emptyDir: {}      
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 0
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 65
---
apiVersion: v1
kind: Service
metadata:
  namespace: 'uat-cee-3'
  labels:
    name: infin8v2-app-service
  name: infin8v2-app-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: infin8v2-app
